Actually install React, Next; add babel aliasing

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "plugins": ["transform-class-properties"]
+  "plugins": [
+    "transform-class-properties",
+    ["module-resolver", {
+      "root": ["."],
+      "alias": {
+        "pages": "./pages",
+        "components": "./components"
+      }
+    }]
+  ]
 }
