--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^7.0.1"
+    "babel-plugin-module-resolver": "^3.1.1",
+    "next": "^7.0.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
