Mucked around with css modules but they don't work still

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,8 @@
       "root": ["."],
       "alias": {
         "pages": "./pages",
-        "components": "./components"
+        "components": "./components",
+        "styles": "./styles",
       }
     }]
   ]
