Add styled-components and redux-zero

--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,11 @@
         "components": "./components",
         "styles": "./styles",
       }
+    }],
+    ["babel-plugin-styled-components", {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
     }]
   ]
 }
