--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@atlaskit/button": "^9.0.13",
+    "@atlaskit/field-text": "^7.0.11",
+    "@atlaskit/form": "^4.0.10",
+    "@atlaskit/select": "^6.0.2",
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.8.0",
