--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mentors",
   "version": "0.0.1",
+  "main": "server.js",
   "description": "Mentoring app for Hackathons!",
   "author": "Andrew Sosa <andrew@andrewsosa.com>",
   "license": "MIT",
@@ -15,11 +16,18 @@
     "@atlaskit/form": "^4.0.10",
     "@atlaskit/select": "^6.0.2",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.18.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.8.0",
     "bloomer": "^0.6.3",
+    "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
+    "dotenv": "^6.0.0",
     "eslint-plugin-babel": "^5.2.1",
+    "express": "^4.16.3",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.1",
+    "morgan": "^1.9.1",
     "next": "^7.0.1",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
