--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jest": "^24.0.0",
     "jest-environment-node": "^24.0.0",
     "lerna": "^3.10.7",
+    "mockdate": "^2.0.2",
+    "mongodb-memory-server": "^3.0.0",
     "prettier": "^1.16.4",
     "supertest": "^3.4.2"
   },
