--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.3.1",
     "morgan": "^1.9.1",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "mongodb-memory-server": "^3.0.0"
   }
 }
