--- a/services/backend/Dockerfile
+++ b/services/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:11
-WORKDIR /src/hackoverflow/backend
+WORKDIR /src/backend
 EXPOSE 3000
 ADD package-lock.json .
 RUN npm ci
-ADD . .
+ADD ./src/ .
 CMD [ "node", "server.js" ]
 
