--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -2,23 +2,24 @@
   "name": "backend",
   "version": "0.0.1",
   "main": "server.js",
-  "description": "Mentoring app for Hackathons!",
+  "description": "Mentoring backend for Hackathons!",
   "author": "Andrew Sosa <andrew@andrewsosa.com>",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "dev": "nodemon",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "apollo-server": "^2.4.0",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "jest": "^24.0.0",
-    "mongoose": "^5.3.1",
-    "morgan": "^1.9.1",
-    "socket.io": "^2.1.1"
+    "graphql": "^14.1.1",
+    "graphql-import": "^0.7.1",
+    "graphql-iso-date": "^3.6.1",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.3.1"
   },
   "devDependencies": {
+    "jest": "^24.0.0",
     "mongodb-memory-server": "^3.0.0"
   }
 }
